--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-simple-maps": "^2.3.0",
+    "react-tooltip": "^4.2.12",
+    "recoil": "^0.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
