--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.1",
     "react-simple-maps": "^2.3.0",
     "react-tooltip": "^4.2.12",
+    "recharts": "^2.0.9",
     "recoil": "^0.1.2",
     "web-vitals": "^0.2.4"
   },
