--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "d3-fetch": "^2.0.0",
-    "d3-scale": "^3.2.3"
+    "d3-scale": "^3.2.3",
+    "react-image-gallery": "^1.0.9"
   }
 }
